--- a/accounts-query-side-service/build.gradle
+++ b/accounts-query-side-service/build.gradle
@@ -1,12 +1,16 @@
+group = 'birkholm'
+
 apply plugin: VerifyMongoDBConfigurationPlugin
 apply plugin: VerifyEventStoreEnvironmentPlugin
 
 apply plugin: 'spring-boot'
+apply plugin: 'docker'
 
 dependencies {
     compile project(":accounts-query-side-web")
     compile project(":common-swagger")
 
+	compile "org.springframework.boot:spring-boot-starter-amqp:1.3.5.RELEASE"
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-actuator"
 
@@ -19,4 +23,16 @@ dependencies {
 
 test {
     ignoreFailures true
+}
+
+task buildDocker(type: Docker, dependsOn: build) {
+  push = true
+  applicationName = jar.baseName
+  dockerfile = file('build/libs/Dockerfile')
+  doFirst {
+    copy {
+      from jar
+      into stageDir
+    }
+  }
 }
