--- a/monolithic-service/build.gradle
+++ b/monolithic-service/build.gradle
@@ -1,6 +1,10 @@
+group = 'birkholm'
+
 apply plugin: VerifyMongoDBConfigurationPlugin
 
 apply plugin: 'spring-boot'
+apply plugin: 'eclipse'
+apply plugin: 'docker'
 
 dependencies {
     compile project(":accounts-query-side-web")
@@ -9,12 +13,26 @@ dependencies {
 
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-actuator"
+    
+    compile "org.springframework.boot:spring-boot-starter-amqp"
 
     compile "net.chrisrichardson.eventstore.client:eventstore-jdbc_2.10:$eventStoreClientVersion"
 
     testCompile project(":testutil")
     testCompile "org.springframework.boot:spring-boot-starter-test"
 
+}
+
+task buildDocker(type: Docker, dependsOn: build) {
+  push = true
+  applicationName = jar.baseName
+  dockerfile = file('build/libs/Dockerfile')
+  doFirst {
+    copy {
+      from jar
+      into stageDir
+    }
+  }
 }
 
 
