--- a/transactions-command-side-web/build.gradle
+++ b/transactions-command-side-web/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compile project(":transactions-command-side-backend")
     compile project(":common-web")
 
+	compile "org.springframework.boot:spring-boot-starter-amqp:1.3.5.RELEASE"
     compile "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
 
     testCompile "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
